[package]
publish = false
name = "survey-index"
description = "Tool to OCCASIONALLY survey the crates.io registry index for Binstall stats"
repository = "https://github.com/cargo-bins/crates-index-survey"
version = "0.1.0"
rust-version = "1.61.0"
authors = ["Félix Saparelli <felix@passcod.name>"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
binstalk-downloader = { version = "0.1.0", features = ["zlib-ng", "trust-dns", "zstd-thin"] }
crates-index = "0.18.9"
semver = "1.0.13"
tracing = "0.1.36"
rayon = "1.6.1"
url = "2.2.2"
tokio = { version = "1.25.0", features = ["full"] }
sha2 = "0.10.2"
cargo_toml = "0.11.5"
serde_json = "1.0.85"

[dependencies.miette]
version = "5.3.0"
features = ["fancy"]

[dependencies.reqwest]
version = "0.11.11"
default-features = false
features = [
    "rustls-tls",
    "trust-dns",
]

[dependencies.tokio-postgres]
version = "0.7.7"
features = [
    "with-serde_json-1",
]

[dependencies.tracing-subscriber]
version = "0.3.15"
features = [
	"env-filter",
	"fmt",
	"json",
	"tracing-log",
]
